Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67091

Harfbuzz NG calculates positions of glyphs incorrectly for QGlyphRun on Mac OS

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.15
    • 5.9.4, 5.10.1
    • GUI: Font handling
    • None
    • macOS Sierra 10.12.6(MacBook Pro Retina, 15-inch, Mid 2014)
    • macOS
    • e19345987714f4f76c8d7075355980b154adbc44 (qt/qtbase/5.15)

    Description

      On Mac OS for some fonts, Harfbuzz NG calculates positions of glyphs incorrectly.
      If add environment variable "QT_HARFBUZZ" with value "old" everything looks correct.
      Please take a look at attached example and screenshots.

      Attachments

        1. AmericanTypewriter.zip
          945 kB
        2. Arial.zip
          1.40 MB
        3. Baskerville.zip
          709 kB
        4. Chalkboard.zip
          101 kB
        5. GlyphRunHarfbuzzNG.zip
          3 kB
        6. HarfbuzzNG.png
          HarfbuzzNG.png
          66 kB
        7. HarfbuzzOldKerning.png
          HarfbuzzOldKerning.png
          26 kB
        8. QT_HARFBUZZ=old.png
          QT_HARFBUZZ=old.png
          67 kB
        For Gerrit Dashboard: QTBUG-67091
        # Subject Branch Project Status CR V

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            yurik147 Yurii Olenych
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes